--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
+    <%= javascript_include_tag "application", 'data-turbolink-track'=> true%>
     <%= csrf_meta_tags %>
   </head>
 
@@ -17,6 +18,6 @@
     <%if flash[:alert]%><div class="alert-box"><%= flash[:alert]%></div><% end %>
   </div>
     <%= yield %>
-    <%= javascript_include_tag "application" %>
+    <%# javascript_include_tag "application"%>
   </body>
 </html>
