--- a/app/views/book/payments/_accordion.html.erb
+++ b/app/views/book/payments/_accordion.html.erb
@@ -12,18 +12,17 @@
       </thead>
       <tbody>
         <% total=0 %>
-        <% p.purchases.each do |pur| %>
+        <% p.books.each do |b| %>
         <tr>
 
-
-          <td><%=pur.book.title%>
-            <% if p.status==0%>
-              <%= link_to "取消訂購", book_purchase_path(pur.book_id), method: :delete, remote: true, data: {type: 'json'} , class: 'button secondary small purchase-cancel-button right' %>
+          <td><%=b.title%>
+            <% if p.status==0 && phase(1)%>
+              <%= link_to "取消訂購", book_purchase_path(b.id), method: :delete, remote: true, data: {type: 'json'} , class: 'button alert small purchase-cancel-button right' %>
             <% end %>
           </td>
 
-          <td><%=pur.book.price%></td>
-          <% total+=pur.book.price %>
+          <td><%=b.price%></td>
+          <% total+=b.price %>
         </tr>
         <% end %>
       </tbody>
@@ -35,7 +34,7 @@
       </tfoot>
     </table>
 
-    <% if p.status==0 %>
+    <% if p.status==0%>
     <div class="checkout text-center">
       <%= link_to "結帳", checkout_book_payment_path(p.id), remote: true, data: {type: 'json'} , class: 'button checkout-button' %>
     </div>
@@ -52,12 +51,30 @@
           </div>
         </div>
       <% end %>
+      <div class="small-2 confirm-status columns"></div>
       <div class="small-2 payment-cancel columns">
+        <% if phase(1) %>
         <%= link_to "取消訂單", book_payment_path(p.id), method: :delete, remote: true, data: {type: 'json'} , class: 'button alert expand payment-cancel-button' %>
+        <% end %>
       </div>
-    
+    </div>
+
+    <% elsif p.status==2%>
+    <div class="row">
+      <%= form_tag confirm_book_payment_path(p.id),method: :put ,remote: true, data: {type: 'json'}, class: 'small-4 columns modify-confirm-form' do%>
+        <div class="row collapse">
+          <div class="small-8 columns">
+            <%= text_field_tag 'confirm_code', nil, placeholder:p.payment_code.to_s , class: 'modify-confirm-code' %>
+          </div>
+          <div class="small-4 columns">
+            <%= submit_tag "Confirm", data:{type: 'json'},class: 'button postfix modify-confirm-button' %>
+          </div>
+        </div>
+      <% end %>
+      <div class="small-2 confirm-status columns end"></div>
     </div>
     <% end %>
 
   </div>
 </dd>
+<br>
