--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,22 @@
   </head>
 
   <body>
-  <div class="small-8 small-centered columns">
-    <%if flash[:notice]%><div class="alert-box info"><%= flash[:notice]%></div><% end %>
-    <%if flash[:alert]%><div class="alert-box"><%= flash[:alert]%></div><% end %>
+<!--   <div class="fixed">
+    <nav class="top-bar show-for-small-only" data-topbar>
+      <ul class="title-area">
+        <li class="toggle-topbar menu-icon "><a href="#"><span>Menu</span></a></li>
+      </ul>
+    </nav>
+  </div> -->
+  <div class="medium-2 columns sidebar show-for-medium-up">
+    <%= layout 'book/user_nav' %>
   </div>
-    <%= yield %>
-    <%# javascript_include_tag "application"%>
+  <div class="small-12 medium-10 columns">
+    <div class="small-8 small-centered columns">
+      <%if flash[:notice]%><div class="alert-box info"><%= flash[:notice]%></div><% end %>
+      <%if flash[:alert]%><div class="alert-box"><%= flash[:alert]%></div><% end %>
+    </div>
+      <%= yield %>
+  </div>
   </body>
 </html>
