--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,10 @@
       </ul>
     </nav>
   </div> -->
-  <div class="medium-2 columns sidebar show-for-medium-up">
-    <%= layout 'book/user_nav' %>
-  </div>
-  <div class="small-12 medium-10 columns">
-    <div class="small-8 small-centered columns">
-      <%if flash[:notice]%><div class="alert-box info"><%= flash[:notice]%></div><% end %>
-      <%if flash[:alert]%><div class="alert-box"><%= flash[:alert]%></div><% end %>
+  <div class="small-12 columns">
+    <div class="small-12 small-centered columns">
+      <%if flash[:notice]%><div class="alert-box flash-box info"><%= flash[:notice]%></div><% end %>
+      <%if flash[:alert]%><div class="alert-box flash-box"><%= flash[:alert]%></div><% end %>
     </div>
       <%= yield %>
   </div>
