--- a/app/views/book/admins/edit.html.erb
+++ b/app/views/book/admins/edit.html.erb
@@ -45,6 +45,27 @@
 		</div>
 	</div>
 	<div class="small-6 columns">
+		<h2>Change Department Phase</h2>
+		<div class="panel">
+			<%= form_tag dept_change_phase_book_admin_path , remote:true ,method: :get,class: 'get-dept-change-form' do%>
+				<div class="row">
+					<div class="small-3 columns">
+						<%= label_tag :department_id, 'Department', class: 'right inline'%>	
+					</div>
+					<div class="small-6 columns">
+						<%= select_tag(:department_id, options_for_select(Department.pluck(:dept_name,:id))) %>
+					</div>
+					<div class="small-3 columns">
+						<%= submit_tag 'Select', class: 'inline' %>
+					</div>
+				</div>
+			<% end %>
+			<div class="put-dept-change-form">
+					
+				</div>
+		</div>
+	</div>
+	<div class="small-6 columns">
 		<h2>Import Users To Department</h2>
 		<div class="panel">
 		<%= form_tag(users_book_admin_path,multipart:true ,class: "create-department-form") do %>
