--- a/app/views/layouts/book/user.html.erb
+++ b/app/views/layouts/book/user.html.erb
@@ -12,7 +12,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body style="margin-top:0">
 <!--   <div class="fixed">
     <nav class="top-bar show-for-small-only" data-topbar>
       <ul class="title-area">
