--- a/app/views/book/admins/edit.html.erb
+++ b/app/views/book/admins/edit.html.erb
@@ -36,6 +36,10 @@
 			<%= label_tag :dept_name, 'Department name' %>
 			<%= text_field_tag :dept_name %>
 			</div>
+			<div class="small-7">
+			<%= label_tag :payment_info, 'Payment Info' %>
+			<%= text_area_tag :payment_info %>
+			</div>
 			<div>
 			<%= label_tag :has_member, 'Has Members?'%>
 			<%= check_box_tag(:has_member) %>
