--- a/app/views/book/payments/_accordion.html.erb
+++ b/app/views/book/payments/_accordion.html.erb
@@ -53,7 +53,7 @@
       <% end %>
       <div class="small-12 medium-2 confirm-status columns"></div>
       <div class="small-12 medium-3 large-2 text-center columns" style="margin-top:0.45em">
-        <span data-tooltip aria-haspopup="true" class="has-tip" title="<%= current_user.department.payment_info||'請洽詢系學會負責單位'%>">繳款資訊</span>
+        <span data-tooltip aria-haspopup="true" class="has-tip" title="<%= current_user.department.payment_info||'請洽詢系學會負責單位'%>">繳款及確認碼資訊</span>
       </div>
       <div class="show-for-medium-up medium-2 payment-cancel right">
         <% if phase(1) %>
