--- a/app/views/book/admins/edit.html.erb
+++ b/app/views/book/admins/edit.html.erb
@@ -49,7 +49,7 @@
 		</div>
 	</div>
 	<div class="small-6 columns">
-		<h2>Change Department Phase</h2>
+		<h2>Dept. Phase / End Stage</h2>
 		<div class="panel">
 			<%= form_tag dept_change_phase_book_admin_path , remote:true ,method: :get,class: 'get-dept-change-form' do%>
 				<div class="row">
