--- a/app/views/book/departments/payments.html.erb
+++ b/app/views/book/departments/payments.html.erb
@@ -3,7 +3,7 @@
 <div class="small-12 columns">
 	<div class="payments-sub-nav small-8 small-centered columns">
 		<dl class="sub-nav">
-			<% name_arr=['全部','待繳費','待確認','已完成'] %>
+			<% name_arr=['目前階段','待繳費','待確認','已完成','未領完','完成領取'] %>
 			<% name_arr.each_with_index do |name,i|%>
 			<dd class="payment-filter<%=(i==0 ? " active" : "")%>">
 				<%= link_to name, payments_book_department_path(meth:i), remote: true %>
