--- a/app/views/book/departments/_users_table.html.erb
+++ b/app/views/book/departments/_users_table.html.erb
@@ -22,6 +22,21 @@
 	<td class="user-is-member text-center"><%= user.is_member ? '會員' : '非會員'%></td>
 	<% end %>
 	<td>
+
+	<%= form_tag remark_book_user_path(user.id), method: :put, remote: :true ,class: 'remark-form' do%>
+	<span class="remark-text"><%= user.remark.nil? ? '無' : user.remark%></span>
+	<span class="remark-input hide small-9 columns"><%= text_field_tag 'remark', user.remark%></span>
+	<a class="remark-edit right"><i class="fi-pencil"></i></a>
+	<span class="remark-success right" style="display:none">已更新</span>
+	<a class="remark-cancel hide right"><i class="fi-x"></i></a>
+	<a class="remark-update hide right"><i class="fi-check"></i></a>
+	<div class="submit_button hide">
+	<%= submit_tag%>
+	</div>
+	<% end %>
+	
+	</td>
+	<td>
 		<%= link_to '檢視', book_user_path(user.id), remote:true, class: "button tiny dept-payment-view-button", data:{'reveal-id'=>'user-detail-modal','reveal-ajax'=>true}%>
 		<% if current_book_department.has_member %>
 		<%= link_to (user.is_member ? '取消會員' : '新增會員') , member_book_user_path(user.id), remote:true, method: :put, class: "button tiny dept-user-member-button"+(user.is_member ? ' alert' : ' success')%>
