--- a/app/views/book/departments/users.html.erb
+++ b/app/views/book/departments/users.html.erb
@@ -14,7 +14,9 @@
 				<th class="text-center" style="width:5%">帳號</th>
 				<th class="text-center" style="width:6%">待確認訂單</th>
 				<th class="text-center" style="width:6%">已完成訂單</th>
-				<th class="text-center" style="width:6%">已付款金額</th>
+				<th class="text-center" style="width:6%">本階段已付</th>
+				<th class="text-center" style="width:6%">未領取訂單</th>
+				<th class="text-center" style="width:6%">完成領取訂單</th>
 				<% if current_book_department.has_member %>
 				<th class="text-center" style="width:4%">會員?</th>
 				<% end %>
