--- a/app/views/book/departments/_has_mem_book_list.html.erb
+++ b/app/views/book/departments/_has_mem_book_list.html.erb
@@ -2,6 +2,7 @@
 	<% b_all=d.users.has_book_in_payment(book.id,1..3) %>
 	<% b_com=d.users.has_book_in_payment(book.id,3) %>
 	<td class="book-title"><%= book.title%></td>
+	<td><%= book.department_books.where(department_id:d.id).first.status==1 ? '已上架' : '已下架' %></td>
 	<td><%= mem_price=book.member_price(d.id) %></td>
 	<td><%= non_price=book.nonmember_price(d.id) %></td>
 	<td><%= b_all.where(is_member:true).count %></td>
